kube/aptos_devnet_starswap-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starswap-api-deployment-aptos-devnet
  labels:
    app: starswap-api-aptos-devnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starswap-api-aptos-devnet
  template:
    metadata:
      labels:
        app: starswap-api-aptos-devnet
    spec:
      containers:
        - name: starswap-api-aptos-devnet
          image: ghcr.io/elements-studio/starcoin_starswap:sha-820c748
          ports:
            - containerPort: 8600
