kube/aptos_mainnet_starswap-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starswap-api-deployment-aptos-mainnet
  labels:
    app: starswap-api-aptos-mainnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starswap-api-aptos-mainnet
  template:
    metadata:
      labels:
        app: starswap-api-aptos-mainnet
    spec:
      containers:
        - name: starswap-api-aptos-mainnet
          image: ghcr.io/elements-studio/starcoin_starswap:sha-ef7059b
          ports:
            - containerPort: 8600
