kube/aptos_testnet_starswap-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starswap-api-deployment-aptos-testnet
  labels:
    app: starswap-api-aptos-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starswap-api-aptos-testnet
  template:
    metadata:
      labels:
        app: starswap-api-aptos-testnet
    spec:
      containers:
        - name: starswap-api-aptos-testnet
          image: ghcr.io/elements-studio/starcoin_starswap:sha-dee8379
          ports:
            - containerPort: 8600
