kube/barnard-new_starswap-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starswap-api-deployment-barnard-new
  labels:
    app: starswap-api-barnard-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starswap-api-barnard-new
  template:
    metadata:
      labels:
        app: starswap-api-barnard-new
    spec:
      containers:
      - name: starswap-api-barnard-new
        image: ghcr.io/elements-studio/starcoin_starswap:sha-effba8e
        ports:
        - containerPort: 8600
