kube/barnard-old_starswap-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starswap-api-deployment-barnard-old
  labels:
    app: starswap-api-barnard-old
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starswap-api-barnard-old
  template:
    metadata:
      labels:
        app: starswap-api-barnard-old
    spec:
      containers:
      - name: starswap-api-barnard-old
        image: ghcr.io/elements-studio/starcoin_starswap:sha-4da9df1
        ports:
        - containerPort: 8600
