kube/barnard_starswap-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starswap-api-deployment-barnard
  labels:
    app: starswap-api-barnard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starswap-api-barnard
  template:
    metadata:
      labels:
        app: starswap-api-barnard
    spec:
      containers:
        - name: starswap-api-barnard
          image: ghcr.io/elements-studio/starcoin_starswap:sha-99f2fd0
          ports:
            - containerPort: 8600
