kube/proxima_starswap-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starswap-api-deployment-proxima
  labels:
    app: starswap-api-proxima
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starswap-api-proxima
  template:
    metadata:
      labels:
        app: starswap-api-proxima
    spec:
      containers:
        - name: starswap-api-proxima
          image: ghcr.io/elements-studio/starcoin_starswap:sha-c5980e4
          ports:
            - containerPort: 8600
