kube/starswap-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starswap-api-deployment
  labels:
    app: starswap-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starswap-api
  template:
    metadata:
      labels:
        app: starswap-api
    spec:
      containers:
        - name: starswap-api
          image: ghcr.io/elements-studio/starcoin_starswap:sha-157b128
          ports:
            - containerPort: 8600
