kube/aptos_devnet_starswap-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: starswap-api-aptos-devnet
  name: starswap-api-aptos-devnet
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8600
  selector:
    app: starswap-api-aptos-devnet
  type: ClusterIP
