kube/aptos_mainnet_starswap-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: starswap-api-aptos-mainnet
  name: starswap-api-aptos-mainnet
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8600
  selector:
    app: starswap-api-aptos-mainnet
  type: ClusterIP
