kube/aptos_testnet_starswap-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: starswap-api-aptos-testnet
  name: starswap-api-aptos-testnet
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8600
  selector:
    app: starswap-api-aptos-testnet
  type: ClusterIP
