kube/barnard-new_starswap-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: starswap-api-barnard-new
  name: starswap-api-barnard-new
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8600
  selector:
    app: starswap-api-barnard-new
  type: ClusterIP
