kube/barnard-old_starswap-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: starswap-api-barnard-old
  name: starswap-api-barnard-old
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8600
  selector:
    app: starswap-api-barnard-old
  type: ClusterIP
