kube/barnard_starswap-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: starswap-api-barnard
  name: starswap-api-barnard
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8600
  selector:
    app: starswap-api-barnard
  type: ClusterIP
